--- a/desafio-frontend/src/sass/App.css
+++ b/desafio-frontend/src/sass/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #f0f0f0;
+}
+
 header {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -27,7 +31,7 @@ header .search-bar {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 80%;
+  width: 75%;
 }
 
 header .search-bar div {
@@ -67,5 +71,120 @@ header .search-bar div button {
   outline: none;
   text-align: center;
   width: 7%;
+}
+
+header .search-bar div button:hover {
+  background-color: #ed009e;
+}
+
+.cards {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 10vh;
+  width: 100%;
+}
+
+.cards div {
+  border-bottom: 2px solid #bebebe;
+  width: 60%;
+}
+
+.cards div img {
+  width: 100%;
+}
+
+.cards div div {
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.cards div div .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 60%;
+}
+
+.cards div div .title h1 {
+  font-size: 25px;
+}
+
+.cards div div .button {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 20%;
+}
+
+.cards div div .button a {
+  background-color: #ba007c;
+  border: 2px solid rebeccapurple;
+  border-radius: 30px;
+  color: black;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 10px 25px;
+  text-decoration: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.cards div div .button a:hover {
+  background-color: #ed009e;
+}
+
+.details {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 10vh;
+  width: 100%;
+}
+
+.details .title {
+  width: 70%;
+}
+
+.details .title img {
+  width: 100%;
+}
+
+.details .title h1 {
+  font-size: 40px;
 }
 /*# sourceMappingURL=App.css.map */
