--- a/desafio-frontend/src/sass/_main.scss
+++ b/desafio-frontend/src/sass/_main.scss
@@ -1,8 +1,13 @@
 $header-color: rgb(102, 51, 153);
 $button-color: rgb(186, 0, 124);
+$body-color: rgb(240, 240, 240);
 
 @mixin display-flex {
   align-items: center;
   display: flex;
   justify-content: center;
+}
+
+body {
+  background-color: $body-color;
 }
